--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,6 +32,7 @@ subjects:
 - !lcsh 'Mongkut, King of Siam, 1804-1868'
 - !lcsh 'Thailand -- Social life and customs'
 - !lcsh 'Leonowens, Anna Harriette, 1831-1915 -- Homes and haunts -- Thailand'
+- GITenberg
 title: 'The English Governess at the Siamese Court
 
   Being Recollections of Six Years in the Royal Palace at Bangkok'
